k8s/service.yaml
# k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app
  namespace: devops-app
spec:
  type: ClusterIP
  selector:
    app: devops-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
