k8s/ingress.aks.yaml
# k8s/ingress.aks.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-app
  namespace: devops-app
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: '1m'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '30'
    nginx.ingress.kubernetes.io/limit-rps: '20'
spec:
  ingressClassName: nginx
  rules:
    - http: # No host → will accept requests to the LB IP
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-app
                port:
                  number: 80
